force-app/main/default/objects/Fecha_SYSDE__c/Fecha_SYSDE__c.object-meta.xml
<CustomObject>
    <description>Fecha cierre traída desde SYSDE.</description>
    <label>Fecha SYSDE</label>
    <nameField>
        <label>Nombre de Fecha_SYSDE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fecha SYSDES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>