force-app/main/default/objects/Fecha_SYSDE__c/fields/FechaComparar__c.field-meta.xml
<CustomField>
    <fullName>FechaComparar__c</fullName>
    <description>Este campo inserta la fecha de sysde y hacemos la comparacion</description>
    <label>FechaComparar</label>
    <type>Date</type>
</CustomField>